--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "MCP.py",
+            "src": "pokemon_api.py",
             "use": "@vercel/python"
         }
     ],
@@ -13,7 +13,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "MCP.py"
+            "dest": "pokemon_api.py"
         }
     ]
 } 
