--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,22 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "pokemon_api.py",
-            "use": "@vercel/python"
-        }
+      {
+        "src": "pokemon_api.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "includeFiles": [
+      "static/**"
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "pokemon_api.py"
-        }
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "pokemon_api.py"
+      }
     ]
-} 
+  }
